--- a/shibboleth-idp-dockerized/ext-conf/views/login.vm
+++ b/shibboleth-idp-dockerized/ext-conf/views/login.vm
@@ -34,128 +34,168 @@
 
 ##
 <!DOCTYPE html>
-<html>
-  	<head>
-    	<meta charset="utf-8">
-    	<title>#springMessageText("idp.title", "Web Login Service")</title>
-    	<link rel="stylesheet" type="text/css" href="$request.getContextPath()/css/main.css">
-  	</head>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Cornell University Web Login</title>
+    <link href="/idp/css/cornell_basic.css" rel="stylesheet">
+
+</head>
+
         <script language="Javascript">
     	<!--
     	#parse( "login.js" )
     	// -->
     	</script>
-  	<body>
-    <div class="wrapper">
-      <div class="container">
-        <header>
-          <img src="$request.getContextPath()#springMessage("idp.logo")" alt="#springMessageText("idp.logo.alt-text", "logo")">
-        </header>
 
-        <div class="content">
-          <div class="column one">
-            #parse("login-error.vm")
 
-            <p>Hi, $requiredUsername</p>
-            <p>Auth Context Hinted Name: $hintedName</p>
+<body class="brand-reverse">
 
-            <form action="$flowExecutionUrl" method="post">
-
-            #set ($serviceName = $rpUIContext.serviceName)
-            #if ($serviceName && !$rpContext.getRelyingPartyId().contains($serviceName))
-              <legend>
-                #springMessageText("idp.login.loginTo", "Login to") $encoder.encodeForHTML($serviceName)
-              </legend>
-            #end
-
-            ## HIDDEN PASSWORD FIELD
-            <div class="form-element-wrapper">
-            ## <label for="username">#springMessageText("idp.login.username", "User")</label>
-            <input class="form-element form-field" id="username" name="j_username" type="hidden"
-                value="#if($requiredUsername)$encoder.encodeForHTML($requiredUsername)#end">
+    <header class="band" id="site-header">
+        <div class="container">
+            <div class="content compact">
+                <h1 class="cu-logo"><a href="https://www.cornell.edu"><img
+                            src="/idp/images/cornell_basic/bold_cornell_seal_simple_white.svg" alt="Cornell University"
+                            width="100" height="100"></a></h1>
+                <div class="cu-unit">
+                    <h2>CUWebLogin</h2>
+                    <h3>Cornell University</h3>
+                </div>
             </div>
-
-            ## PASSWORD ONLY            
-            #if ($hintedName == "password")
-              <div class="form-element-wrapper">
-                <label for="password">#springMessageText("idp.login.password", "Pass")</label>
-                <input class="form-element form-field" id="password" name="j_password" type="password" value="">
-              </div>
-
-
-              <div class="form-element-wrapper">
-                <button class="form-element form-button" type="submit" name="_eventId_proceed"
-                    onClick="this.childNodes[0].nodeValue='#springMessageText("idp.login.pleasewait", "Logging in, please wait...")'"
-                    >#springMessageText("idp.login.login", "Login")</button>
-              </div>
-            #end
-
-            ## PASSWORDLESS ELIGIBLE: USE PASSWORD
-            #if ($hintedName == "passwordless")
-                <button id="passwordButton" type="button" class="form-element form-button" onClick="displayPassword(); return false;">
-                    #springMessageText("idp.login.login2", "Continue with Password")
-                </button>
-
-            <div id="passwordForm" style="display:none;">
-            <div class="form-element-wrapper">
-                <label for="password">#springMessageText("idp.login.password", "Pass")</label>
-                <input class="form-element form-field" id="password" name="j_password" type="password" value="">
-              </div>
-
-
-              <div class="form-element-wrapper">
-                <button class="form-element form-button" type="submit" name="_eventId_proceed"
-                    onClick="this.childNodes[0].nodeValue='#springMessageText("idp.login.pleasewait", "Logging in, please wait...")'"
-                    >#springMessageText("idp.login.login", "Login")</button>
-              </div>
-              </div>
-
-              <h1> ------- OR ------- </h1>
-              
-              <div class="form-element-wrapper">
-                <button class="form-element form-button" type="submit" name="_eventId" value="MyCustomEvent" 
-                    onClick="this.childNodes[0].nodeValue='#springMessageText("idp.login.pleasewait", "Logging in, please wait...")'"
-                    >#springMessageText("idp.login.login1", "Continue with Passwordless")</button>
-              </div>
-            #end
-
-            </form>
         </div>
+    </header>
 
-			#*
-              //
-              //    SP Description & Logo (optional)
-              //    These idpui lines will display added information (if available
-              //    in the metadata) about the Service Provider (SP) that requested
-              //    authentication. These idpui lines are "active" in this example
-              //    (not commented out) - this extra SP info will be displayed.
-              //    Remove or comment out these lines to stop the display of the
-              //    added SP information.
-              //
-            *#
-            #set ($logo = $rpUIContext.getLogo())
-            #if ($logo)
-              <img src= "$encoder.encodeForHTMLAttribute($logo)"
-                  alt="$encoder.encodeForHTMLAttribute($serviceName)">
-            #end
-            #set ($desc = $rpUIContext.getServiceDescription())
-            #if ($desc)
-              $encoder.encodeForHTML($desc)
-            #end
-            
-          </div>
-          <div class="column two">
-            <ul class="list list-help">
-              #if ($passwordEnabled)
-                <li class="list-help-item"><a href="#springMessageText("idp.url.password.reset", "#")"><span class="item-marker">&rsaquo;</span> #springMessageText("idp.login.forgotPassword", "Forgot your password?")</a></li>
-              #end
-              <li class="list-help-item"><a href="#springMessageText("idp.url.helpdesk", "#")"><span class="item-marker">&rsaquo;</span> #springMessageText("idp.login.needHelp", "Need Help?")</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <div class="band" id="main-content">
+        <main id="main" class="container aria-target" tabindex="-1">
 
+            <article class="content" id="main-article">
+                <h1>Log in to continue</h1>
+                <div class="flex-grid">
+                    <div class="flex-7">
+
+                        <form name="login" id="login" action="$flowExecutionUrl" method="post">
+                            <input type="hidden" name="conversation" value='<%= request.getParameter("conversation") %>'>
+                            <fieldset class="semantic">
+                                <legend class="sr-only">Login Form</legend>
+
+                                <label for="userName">Hi, $requiredUsername <em
+                                        class="label-required"><span>(required)</span></em></label>
+                                ## HIDDEN USERNAME INPUT
+                                <input class="form-element form-field" id="username" name="j_username" type="hidden"
+                                  value="#if($requiredUsername)$encoder.encodeForHTML($requiredUsername)#end">
+
+                                ## PASSWORD ONLY
+                                #if ($hintedName == "password")
+                                <input id="password" name="j_password" type="password" required=""
+                                    autocomplete="current-password" aria-required="true" placeholder="Password">
+                                <div class="form-footer">
+                                    <div>
+                                        <input type="submit" name="_eventId_proceed" value="Login">
+                                    </div>
+                                </div>
+                                #end
+
+                                ## PASSWORDLESS ELIGIBLE: USE PASSWORD
+                                #if ($hintedName == "passwordless")
+                                <button class="page-button" style="margin-top: 10px;" id="passwordButton" type="button" onClick="displayPassword(); return false;">
+                                    #springMessageText("idp.login.login2", "Continue with Password")
+                                </button>
+
+                                <div id="passwordForm" style="display:none;">
+                                <div class="form-element-wrapper">
+                                    <input class="form-element form-field" id="password" name="j_password" type="password" value="" placeholder="Password">
+                                </div>
+
+
+                                <div class="form-element-wrapper">
+                                  <button class="page-button" style="margin-top: 10px;" type="submit" name="_eventId_proceed"
+                                        onClick="this.childNodes[0].nodeValue='#springMessageText("idp.login.pleasewait", "Logging in, please wait...")'"
+                                        >#springMessageText("idp.login.login", "Login")</button>
+                                  </div>
+                                </div>
+
+                                  <p style="font-size: 15px; color: #666; margin-top: 10px; margin-top: 10px;"> &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash; OR &mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash; </p>
+                                  
+                                  <div class="form-element-wrapper">
+                                    <button class="page-button" style="margin-bottom: 10px;" type="submit" name="_eventId" value="MyCustomEvent" 
+                                        onClick="this.childNodes[0].nodeValue='#springMessageText("idp.login.pleasewait", "Logging in, please wait...")'"
+                                        >#springMessageText("idp.login.login1", "Continue with Passwordless")</button>
+                                  </div>
+                                #end
+                            
+
+                                <p class="description">To <a target="_blank"
+                                        href="https://it.cornell.edu/cuweblogin/protect-your-identity#section-3">logout</a>,
+                                    you must Exit or Quit your browser.</p>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <div class="flex-5">
+                        <h2 class="h3 heading-security">Always Verify</h2>
+                        <p>University services that use CUWebLogin will always direct you to a
+                            <strong>cornell.edu</strong> address:</p>
+                        <ul class="custom no-bullet cornell-urls">
+                            <li>https://shibidp.cit.<mark>cornell.edu/</mark>...</li>
+                        </ul>
+
+                        <hr>
+                        <h2 class="h3">Support</h2>
+                        <ul class="custom no-bullet">
+                            <li>
+                                <span class="fa fa-life-ring"></span><a class="tooltip"
+                                    href="https://it.cornell.edu/support">Having trouble logging in?</a>
+                                <tip class="cwd-tooltip tooltip-dark tooltip-top">Get help or troubleshoot common issues
+                                </tip>
+                            </li>
+                            <li>
+                                <span class="zmdi zmdi-smartphone-setup"></span><a class="tooltip"
+                                    href="https://twostep.netid.cornell.edu" target=_blank">Manage Your Two-Step
+                                    Login</a>
+                                <tip class="cwd-tooltip tooltip-dark tooltip-top">Add or update devices including
+                                    hardware tokens</tip>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <h2 class="h3">Legal Notice</h2>
+                <p>This service and the services to which it provides access are for authorized use only. Any attempt to
+                    gain unauthorized access, or exceed authorized access, to online University resources will be
+                    pursued, as applicable, under campus codes and state or federal law. <button
+                        class="tooltip tooltip-info">
+                        <div class="sr-only">More Information About </div>System Use Notification
+                    </button>
+                    <tip class="cwd-tooltip tooltip-dark tooltip-top">This service and the services to which it provides
+                        access are for authorized use only. Any attempt to gain unauthorized access, or exceed
+                        authorized access, to online University resources will be pursued, as applicable, under campus
+                        codes and state or federal law. System use notification messages can be implemented in the form
+                        of warning banners displayed when individuals log in to the information system. System use
+                        notification is intended only for information system access that includes an interactive login
+                        interface with a human user and is not intended to require notification when an interactive
+                        interface does not exist.</tip>
+                </p>
+
+            </article>
+
+        </main>
     </div>
-    
- 	</body>
+
+    <footer class="band dark" id="site-footer">
+        <div class="sub-footer band">
+            <div class="container">
+                <div class="content compact">
+                    <div class="wa-msg">
+                        <p>If you have a disability and are having trouble accessing information on this website or need
+                            materials in an alternate format, contact <a
+                                href="mailto:web-accessibility@cornell.edu">web-accessibility@cornell.edu</a> for
+                            assistance.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
 </html>
